--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "firebase": "^9.13.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
